--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -16,9 +16,9 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.14.1",
     "@grpc/proto-loader": "^0.8.0",
+    "dotenv": "^17.2.3",
     "mysql2": "^3.15.3",
-    "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.27"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
